# ScopeGuard-AI

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  cli.py  main.py  metrics.py  sandbox_runner.py
backend/app/api/: deps.py  router.py
backend/app/api/graphql/: __init__.py  schema.py
backend/app/api/rest/: __init__.py  approvals.py  auth.py  engagements.py  intelligence.py  plugins.py  reports.py  scans.py
backend/app/core/: config.py  logging.py  security.py  token_utils.py
backend/app/db/: __init__.py  graph.cypher  models.py  schema.sql  session.py
backend/app/schemas/: approval.py  auth.py  engagement.py  report.py  scan.py
backend/app/services/: approval_service.py  auth_service.py  engagement_service.py  graph_service.py  memory_service.py  report_service.py  scan_service.py
backend/app/services/agents/: analysis_agent.py  base.py  coordinator.py  prompts.py  recon_agent.py  reporting_agent.py
backend/app/services/container/: __init__.py  manager.py
backend/app/services/intelligence/: __init__.py  cve_feed.py
backend/app/services/llm/: anthropic_provider.py  base.py  factory.py  fallback_provider.py  ollama_provider.py  openai_provider.py
backend/app/services/plugins/: __init__.py  base.py  registry.py
backend/app/services/scanners/: __init__.py  dns_resolver.py  http_headers.py  robots.py  tls_inspector.py
backend/app/services/search/: __init__.py  (+5 more)
backend/app/tasks/: celery_app.py  scan_tasks.py
backend/app/templates/: report.md.j2
backend/app/utils/: targets.py
(+29 files in other folders)
